--- a/views/role.ejs
+++ b/views/role.ejs
@@ -70,6 +70,9 @@
                     </p>
 
                     <a href=<%="/roles/"+role._id+"/edit"%> class="btn btn-primary">Edit Role Info</a>
+                    <form method="POST" action=<%="/roles/" + role._id + "?_method=DELETE" %>>
+                        <button type="submit" class="btn btn-primary">Delete Role</button>   
+                    </form>
                 </div>
             </div>
             <a href="/roles" class="btn btn-primary">Go back</a>
