--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,6 +21,11 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="/roles"> Roles Home <span class="sr-only">(current)</span></a>
                         </li>
+                        <% if(userLoggedIn){ %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
+                            </li>
+                        <% } %>
                     </ul>
                 </div>
             </div>
