--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,13 @@
                             <li class="nav-item active">
                                 <a class="nav-link" href="/roles"> Roles Home <span class="sr-only">(current)</span></a>
                             </li>
+
+                            <% if(userLoggedIn){ %>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
+                                </li>
+                            <% } %>
+                            
                         </ul>
                     </div>
                 </div>
