Edited routes within app.js to separate company mini-app with trainer mini-app, without modularizing with different controllers and without using Express.Router yet

--- a/views/edit-employer.ejs
+++ b/views/edit-employer.ejs
@@ -13,7 +13,7 @@
     <body>  
         <div class="container">
             <h3>Edit company info below</h3>
-            <form method="POST" action=<%="/employer/" + employer._id + "/edit?_method=PUT" %>>
+            <form method="POST" action=<%="/company/employer/" + employer._id + "/edit?_method=PUT" %>>
         
                 <div class='form-group'>
                     <label for="company">Company Name</label>
