--- a/views/edit-role.ejs
+++ b/views/edit-role.ejs
@@ -14,7 +14,7 @@
         <h3>Edit role info below</h3>
         <div class="container">
         
-            <form method="POST" action=<%="/roles/" + role._id + "/edit?_method=PUT" %>>
+            <form method="POST" action=<%="/company/roles/" + role._id + "/edit?_method=PUT" %>>
         
                 <div class="form-group">
                     <label for="roleTitle">Position Title</label>
