--- a/views/employer.ejs
+++ b/views/employer.ejs
@@ -40,10 +40,10 @@
                 <p class="card-text">
                     <span class="cardTextTitle">Geographic Reach:</span> <%=employer.geographicReach%>
                 </p>
-                <a href=<%="/employer/"+employer._id+"/edit"%> class="btn btn-primary">Edit Employer Info</a>
+                <a href=<%="/company/employer/"+employer._id+"/edit"%> class="btn btn-primary">Edit Employer Info</a>
             </div>
         </div>
-        <a href="/roles" class="btn btn-primary">Go back</a>
+        <a href="/company/roles" class="btn btn-primary">Go back</a>
     </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
