--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="/roles"> Roles Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="/company/roles"> Roles Home <span class="sr-only">(current)</span></a>
                             </li>
 
                             <% if(userLoggedIn){ %>
@@ -53,7 +53,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                             <h3>Register</h3>
-                            <form action="/register" method='POST' >
+                            <form action="/company/register" method='POST' >
                                 <div class="form-group">
                                     <label for="firstName">First Name</label>
                                     <input type="text" class="form-control" name="firstName" id="firstName" placeholder="Enter your first name">
@@ -84,7 +84,7 @@
                     </div>
                     <div class="col-lg-6">
                             <h3>Sign In</h3>
-                            <form action="/login", method="POST">
+                            <form action="/company/login", method="POST">
                                 <div class="form-group">
                                     <label for="emailInput">Email Address</label>
                                     <input type="email" class="form-control" name="emailInput" id="emailInput" aria-describedby="emailHelp" placeholder="Enter email">
