--- a/views/new-role.ejs
+++ b/views/new-role.ejs
@@ -13,7 +13,7 @@
     <body>
         <h3>Enter new role info below</h3>
         <div class="container">
-            <form action="/roles/new", method="POST">
+            <form action="/company/roles/new", method="POST">
                 <div class="form-group">
                     <label for="roleTitle">Position Title</label>
                     <input type="text" name="roleTitle" class="form-control">
