Modified home page to include separate registration and login forms for trainers and companies

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,3 +28,15 @@ body {
     font-weight: 600;
     font-size: 1.5rem;
 }
+
+#select-user {
+  text-align: center;
+}
+
+#company-auth {
+  display: none;
+}
+
+#trainer-auth {
+  display: none;
+}
