Adding new trainerUser, trainingInstitute schemas, etc. for registration and login - incomplete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,7 +125,7 @@
                                 
                                 <div class="form-group">
                                     <label for="coName">Training Institution Name</label>
-                                    <input type="text" class="form-control" name="coName" id="coName" placeholder="Enter the company name">
+                                    <input type="text" class="form-control" name="instName" id="instName" placeholder="Enter the company name">
                                 </div>
             
                                 <div class="form-group">
