--- a/views/edit-employer.ejs
+++ b/views/edit-employer.ejs
@@ -10,8 +10,26 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,900" rel="stylesheet">
         <link rel='stylesheet' type = "text/css" href='/css/app.css'>
     </head>
-    <body>  
-        <div class="container">
+    <body> 
+        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="/"><i class="fas fa-circle-notch"></i>  Cycloid</a>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        
+                        <% if(userLoggedIn){ %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
+                            </li>
+                        <% } %>
+                        
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container firstDiv">
             <h3>Edit company info below</h3>
             <form method="POST" action=<%="/company/employer/" + employer._id + "/edit?_method=PUT" %>>
         
