--- a/views/edit-role.ejs
+++ b/views/edit-role.ejs
@@ -11,9 +11,28 @@
         <link rel='stylesheet' type = "text/css" href='/css/app.css'>
     </head>
     <body>
-        <h3>Edit role info below</h3>
-        <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="/"><i class="fas fa-circle-notch"></i>  Cycloid</a>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        
+                        <% if(userLoggedIn){ %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
+                            </li>
+                        <% } %>
+                        
+                    </ul>
+                </div>
+            </div>
+        </nav>
         
+        
+        
+        <div class="container firstDiv">
+            <h3>Edit role info below</h3>
             <form method="POST" action=<%="/company/roles/" + role._id + "/edit?_method=PUT" %>>
         
                 <div class="form-group">
