--- a/views/employer.ejs
+++ b/views/employer.ejs
@@ -11,8 +11,26 @@
         <link rel='stylesheet' type = "text/css" href='/css/app.css'>
 </head>
 <body>
+    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="/"><i class="fas fa-circle-notch"></i>  Cycloid</a>
         
-    <div class='container'>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    
+                    <% if(userLoggedIn){ %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
+                        </li>
+                    <% } %>
+                    
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container firstDiv">
 
     
         <div class="card">
