--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
         <title>Cycloid</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,69 +13,64 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#"><i class="fas fa-circle-notch"></i>  Cycloid</a>
+                <a class="navbar-brand" href="/"><i class="fas fa-circle-notch"></i>  Cycloid</a>
             
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/company/roles"> Roles Home <span class="sr-only">(current)</span></a>
-                        </li>
+                        
                         <% if(userLoggedIn){ %>
                             <li class="nav-item">
                                 <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
                             </li>
                         <% } %>
+                        
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="card mb-3" style="max-width: 800px; margin: 0 auto">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="..." class="card-img" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Employer: <%=company.company%></h5>
-                        <a class='card-text' href=<%=company.website%>>Company Website</a>
-                        <p class="card-text">
-                            Size: <%=company.size%>
-                        </p>
-                        <p class="card-text"></p>
-                            Type of Organization: <%=company.type%>
-                        </p>
-                        <p class="card-text"></p>
-                            Founded: <%=company.found%>
-                        </p>
-                        <p class="card-text">
-                            Geographic Reach: <%=company.geographicReach%>
-                        </p>
-                        <p class="card-text">
-                            <small class="text-muted">
-                                This information will be automatically populated for each role 
-                            </small>
-                        </p>
-                        <a class="btn btn-primary btn-sm" href=<%="/company/employer/"+company._id%> role="button">
-                            View/Edit Employer Information
-                        </a>
-
+        <div class="container firstDiv">
+            <div class="card mb-3" style="max-width: 800px; margin: 0 auto">
+                <div class="row no-gutters">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Employer: <%=company.company%></h5>
+                            <a class='card-text' href=<%=company.website%>>Company Website</a>
+                            <p class="card-text">
+                                Size: <%=company.size%>
+                            </p>
+                            <p class="card-text"></p>
+                                Type of Organization: <%=company.type%>
+                            </p>
+                            <p class="card-text"></p>
+                                Founded: <%=company.found%>
+                            </p>
+                            <p class="card-text">
+                                Geographic Reach: <%=company.geographicReach%>
+                            </p>
+    
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    This information will be automatically populated for each role 
+                                </small>
+                            </p>
+                            <a class="btn btn-primary btn-sm" href=<%="/company/employer/"+company._id%> role="button">
+                                View/Edit Employer Information
+                            </a>
+    
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-
-
     
 
-        <div class="container" style="text-align: center">
-            <h1>My Roles</h1>
-        </div>
-
         <div class="container">
+            <h1>My Roles</h1>
+
             <div class="row">
                 <%company.roles.forEach((role) => {%>
 
