--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,13 +15,10 @@
             
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="#"><i class="fas fa-circle-notch"></i>  Cycloid</a>
+                    <a class="navbar-brand" href="/"><i class="fas fa-circle-notch"></i>  Cycloid</a>
                 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="/company/roles"> Roles Home <span class="sr-only">(current)</span></a>
-                            </li>
 
                             <% if(userLoggedIn){ %>
                                 <li class="nav-item">
@@ -34,26 +31,25 @@
                 </div>
             </nav>
             
-            <div class="jumbotron container" id='introJumbotron'>
+            <div class="jumbotron container firstDiv" id='introJumbotron'>
                 <h1 class="display-4">Cycloid</h1>
                 <p class="lead">
-                    A tool for employers seeking skilled trades apprentices from different trade areas 
-                    in your specific city/province
+                    If you are an employer, find skilled trades apprentices and professionals for your next project.
+                    For skilled trades training organizations, give your students employment opportunities. 
                 </p>
                 <hr class="my-4">
                 <p>
                     Register, submit employer information, and add role-specific information that our 
-                    employment partners can view and match you with the best-fit talent for you in your
-                    area
+                    employment partners can view and match you with the best talent in your area.
                 </p>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
             </div>
 
             <div class="container" id="select-user">
-                <h3>Select below to continue to registration</h3>
+                <h3>Select to continue to registration/login</h3>
                 <div class="btn-group" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-outline-secondary" id="companySelectButton">Register as Skilled Trades Employer</button>
-                    <button type="button" class="btn btn-outline-secondary" id="trainerSelectButton">Register as Skilled Trades Training Inst</button>
+                    <button type="button" class="btn btn-outline-secondary" id="companySelectButton">I'm an employer</button>
+                    <button type="button" class="btn btn-outline-secondary" id="trainerSelectButton">I'm a trade school</button>
                 </div>
             </div>
 
