--- a/views/new-role.ejs
+++ b/views/new-role.ejs
@@ -11,8 +11,30 @@
         <link rel='stylesheet' type = "text/css" href='/css/app.css'>
     </head>
     <body>
-        <h3>Enter new role info below</h3>
-        <div class="container">
+
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="/"><i class="fas fa-circle-notch"></i>  Cycloid</a>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        
+                        <% if(userLoggedIn){ %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
+                            </li>
+                        <% } %>
+                        
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+        <div class="container firstDiv">
+            <h3>Enter new role info below</h3>
+
             <form action="/company/roles/new", method="POST">
                 <div class="form-group">
                     <label for="roleTitle">Position Title</label>
