--- a/views/trainer-role.ejs
+++ b/views/trainer-role.ejs
@@ -12,7 +12,26 @@
 </head>
 <body>
 
-        <div class='container'>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="/"><i class="fas fa-circle-notch"></i>  Cycloid</a>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+
+                        <% if(userLoggedIn){ %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
+                            </li>
+                        <% } %>
+                        
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container firstDiv">
 
     
             <div class="card">
