Standardized navbar and converted nav bar section to header partial for each view in this version

--- a/views/trainer-role.ejs
+++ b/views/trainer-role.ejs
@@ -1,35 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cycloid</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,900" rel="stylesheet">
-        <link rel='stylesheet' type = "text/css" href='/css/app.css'>
-</head>
-<body>
+<%- include partials/header.ejs%>
 
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="/"><i class="fas fa-circle-notch"></i>  Cycloid</a>
-            
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-
-                        <% if(userLoggedIn){ %>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/logout"> Logout <span class="sr-only">(current)</span></a>
-                            </li>
-                        <% } %>
-                        
-                    </ul>
-                </div>
-            </div>
-        </nav>
 
         <div class="container firstDiv">
 
